syntax = "proto3";

package livekit;
option go_package = "github.com/livekit/livekit-server/proto/livekit";

// internal protos, not exposed to clients
import "rtc.proto";

message Node {
  string id = 1;
  string ip = 2;
  uint32 num_cpus = 3;
  NodeStats stats = 4;
}

message NodeStats {
  // when server was started
  int64 started_at = 1;
  // when server last reported its status
  int64 updated_at = 2;
  uint32 num_rooms = 3;
  uint32 num_clients = 4;
  uint32 num_tracks_in = 5;
  uint32 num_tracks_out = 6;
}

// message for a node through the router
message RouterMessage {
  oneof message {
    StartSession start_session = 1;
    SignalRequest request = 2;
    SignalResponse response = 3;
    EndSession end_session = 4;
  }
  string participant_id = 5;
}

message StartSession {
  string room_name = 1;
  string participant_name = 2;
}

message EndSession {
}